--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,49 @@
+appdirs==1.4.3
+arrow==0.14.7
+astroid==2.4.2
+black==20.8b1
+CacheControl==0.12.6
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0
+csv-ical==2.0.0
+distlib==0.3.0
+distro==1.4.0
 Flask==1.1.2
+html5lib==1.0.1
+icalendar==4.0.7
+ics==0.7
+idna==2.8
+ipaddr==2.2.0
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+lockfile==0.12.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
+mccabe==0.6.1
+msgpack==0.6.2
+mypy-extensions==0.4.3
+packaging==20.3
+pathspec==0.8.1
+pep517==0.8.2
+progress==1.5
+pylint==2.6.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytoml==0.1.21
+pytz==2020.4
+regex==2020.11.13
+requests==2.22.0
+retrying==1.3.3
+six==1.14.0
+TatSu==5.5.0
+toml==0.10.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.8
+webencodings==0.5.1
 Werkzeug==1.0.1
+wrapt==1.12.1
